welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:4: error: value || is not a member of Int
		while ((A || B) > 10){
                          ^